fixing spacing and stray comman in the extensionDocuments.yml

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -635,6 +635,7 @@ section h3.section-subheading {
 
 .team-member {
     margin-bottom: 50px;
+    height: 250px;
     /*text-align: center;*/
 }
 
